load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:proto disable_global
# gazelle:prefix github.com/pingcap/tidb
# gazelle:exclude tidb-binlog/proto/proto
# gazelle:exclude plugin/conn_ip_example
# gazelle:exclude build/linter/staticcheck
gazelle(name = "gazelle")

package(default_visibility = ["//visibility:public"])

xcode_version(
    name = "xcode_version",
    version = "10.0",
)

go_library(
    name = "tidb_lib",
    srcs = ["a.go"],
    importpath = "github.com/pingcap/tidb",
)

go_binary(
    name = "tidb",
    embed = [":tidb_lib"],
)
