load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "_errdoc-generator_lib",
    srcs = ["main.go"],
    importpath = "github.com/pingcap/tidb/_errdoc-generator",
    visibility = ["//visibility:private"],
    deps = [
        "//br/pkg/errors",
        "//br/pkg/restore/split",
        "//lightning/pkg/checkpoints/checkpointspb",
        "//lightning/pkg/importer",
        "//lightning/pkg/importinto",
        "//pkg/ddl/label",
        "//pkg/ddl/notifier",
        "//pkg/ddl/placement",
        "//pkg/ddl/resourcegroup",
        "//pkg/ddl/systable",
        "//pkg/domain",
        "//pkg/domain/infosync",
        "//pkg/dxf/framework/storage",
        "//pkg/dxf/framework/taskexecutor",
        "//pkg/executor",
        "//pkg/expression",
        "//pkg/expression/exprctx",
        "//pkg/importsdk",
        "//pkg/infoschema",
        "//pkg/ingestor/errdef",
        "//pkg/kv",
        "//pkg/lightning/common",
        "//pkg/lightning/membuf",
        "//pkg/lightning/mydump",
        "//pkg/lock",
        "//pkg/meta",
        "//pkg/meta/autoid",
        "//pkg/metaservice",
        "//pkg/objstore/s3like",
        "//pkg/param",
        "//pkg/privilege/privileges",
        "//pkg/resourcemanager/pool",
        "//pkg/server/err",
        "//pkg/session",
        "//pkg/session/sessionapi",
        "//pkg/sessionctx/sessionstates",
        "//pkg/sessionctx/variable",
        "//pkg/statistics",
        "//pkg/statistics/handle/autoanalyze/priorityqueue",
        "//pkg/store/driver/error",
        "//pkg/store/mockstore/unistore/tikv/dbreader",
        "//pkg/store/mockstore/unistore/tikv/kverrors",
        "//pkg/structure",
        "//pkg/table",
        "//pkg/table/tables",
        "//pkg/timer/api",
        "//pkg/types",
        "//pkg/util/admin",
        "//pkg/util/chunk",
        "//pkg/util/collate",
        "//pkg/util/dbterror",
        "//pkg/util/dbterror/exeerrors",
        "//pkg/util/dbterror/plannererrors",
        "//pkg/util/dbutil",
        "//pkg/util/hint",
        "//pkg/util/logutil/consistency",
        "//pkg/util/parser",
        "//pkg/util/stringutil",
        "//pkg/util/timeutil",
        "//pkg/util/topsql/reporter",
        "//pkg/util/topsql/state",
        "//pkg/util/watcher",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_pingcap_errors//:errors",
    ],
)

go_binary(
    name = "_errdoc-generator",
    embed = [":_errdoc-generator_lib"],
    visibility = ["//visibility:public"],
)
