load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "autoid_service",
    srcs = ["autoid.go"],
    importpath = "github.com/pingcap/tidb/autoid_service",
    visibility = ["//visibility:public"],
    deps = [
        "//kv",
        "//meta",
        "//metrics",
        "//owner",
        "//util/logutil",
        "//util/mathutil",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/kvproto/pkg/autoid",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/go.uber.org/zap",
        "//vendor/google.golang.org/grpc",
    ],
)
