load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bindinfo",
    srcs = [
        "bind_cache.go",
        "bind_record.go",
        "handle.go",
        "session_handle.go",
        "stat.go",
    ],
    importpath = "github.com/pingcap/tidb/bindinfo",
    visibility = ["//visibility:public"],
    deps = [
        "//kv",
        "//metrics",
        "//sessionctx",
        "//sessionctx/sessionstates",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//types",
        "//types/parser_driver",
        "//util/chunk",
        "//util/hack",
        "//util/hint",
        "//util/kvcache",
        "//util/logutil",
        "//util/mathutil",
        "//util/memory",
        "//util/parser",
        "//util/sqlexec",
        "//util/stmtsummary",
        "//util/table-filter",
        "//util/timeutil",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/format",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/exp/maps",
    ],
)

go_test(
    name = "bindinfo_test",
    timeout = "short",
    srcs = [
        "bind_cache_test.go",
        "bind_test.go",
        "capture_test.go",
        "handle_test.go",
        "main_test.go",
        "optimize_test.go",
        "session_handle_test.go",
        "temptable_test.go",
    ],
    embed = [":bindinfo"],
    flaky = True,
    race = "on",
    shard_count = 50,
    deps = [
        "//config",
        "//domain",
        "//errno",
        "//metrics",
        "//server",
        "//sessionctx/variable",
        "//testkit",
        "//testkit/testsetup",
        "//util",
        "//util/hack",
        "//util/parser",
        "//util/stmtsummary",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/prometheus/client_model/go",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.opencensus.io/stats/view",
        "//vendor/go.uber.org/goleak",
    ],
)
