load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "config_util.go",
        "const.go",
    ],
    importpath = "github.com/pingcap/tidb/config",
    visibility = ["//visibility:public"],
    deps = [
        "//br/pkg/streamhelper/config",
        "//util/logutil",
        "//util/tikvutil",
        "//util/versioninfo",
        "//vendor/github.com/BurntSushi/toml",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/log",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/tikv/client-go/v2/config",
        "//vendor/github.com/uber/jaeger-client-go/config",
        "//vendor/go.uber.org/atomic",
        "//vendor/go.uber.org/zap",
    ],
)

go_test(
    name = "config_test",
    timeout = "short",
    srcs = [
        "config_test.go",
        "config_util_test.go",
        "main_test.go",
    ],
    data = glob(["**"]),
    embed = [":config"],
    flaky = True,
    deps = [
        "//testkit/testsetup",
        "//util/logutil",
        "//vendor/github.com/BurntSushi/toml",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/log",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/uber/jaeger-client-go/config",
        "//vendor/go.uber.org/goleak",
    ],
)
