load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "config_util.go",
        "const.go",
    ],
    importpath = "github.com/pingcap/tidb/config",
    visibility = ["//visibility:public"],
    deps = [
        "//br/pkg/streamhelper/config",
        "//parser/terror",
        "//util/logutil",
        "//util/tiflashcompute",
        "//util/tikvutil",
        "//util/versioninfo",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_tikv_client_go_v2//config",
        "@com_github_uber_jaeger_client_go//config",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "config_test",
    timeout = "short",
    srcs = [
        "config_test.go",
        "config_util_test.go",
        "main_test.go",
    ],
    data = glob(["**"]),
    embed = [":config"],
    flaky = True,
    shard_count = 2,
    deps = [
        "//testkit/testsetup",
        "//util/logutil",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_jaeger_client_go//config",
        "@org_uber_go_goleak//:goleak",
    ],
)
