load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["context.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//kv:go_default_library",
        "//sessionctx/variable:go_default_library",
        "//util:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
