load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ddl",
    srcs = [
        "backfilling.go",
        "callback.go",
        "column.go",
        "ddl.go",
        "ddl_algorithm.go",
        "ddl_api.go",
        "ddl_tiflash_api.go",
        "ddl_worker.go",
        "delete_range.go",
        "delete_range_util.go",
        "foreign_key.go",
        "generated_column.go",
        "index.go",
        "mock.go",
        "multi_schema_change.go",
        "options.go",
        "partition.go",
        "placement_policy.go",
        "reorg.go",
        "rollingback.go",
        "sanity_check.go",
        "schema.go",
        "sequence.go",
        "session_pool.go",
        "split_region.go",
        "stat.go",
        "table.go",
        "table_lock.go",
    ],
    importpath = "github.com/pingcap/tidb/ddl",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//ddl/label",
        "//ddl/placement",
        "//ddl/util",
        "//distsql",
        "//domain/infosync",
        "//expression",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//metrics",
        "//owner",
        "//parser",
        "//parser/ast",
        "//parser/charset",
        "//parser/format",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//parser/types",
        "//sessionctx",
        "//sessionctx/binloginfo",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//statistics",
        "//statistics/handle",
        "//store/copr",
        "//store/driver/backoff",
        "//store/helper",
        "//table",
        "//table/tables",
        "//tablecodec",
        "//tidb-binlog/pump_client",
        "//types",
        "//types/parser_driver",
        "//util",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/domainutil",
        "//util/gcutil",
        "//util/hack",
        "//util/logutil",
        "//util/mathutil",
        "//util/mock",
        "//util/ranger",
        "//util/resourcegrouptag",
        "//util/rowDecoder",
        "//util/set",
        "//util/slice",
        "//util/sqlexec",
        "//util/timeutil",
        "//util/topsql",
        "//util/topsql/state",
        "@com_github_google_uuid//:uuid",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/kvrpcpb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tipb//go-tipb",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_tikv_client_go_v2//error",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_client_go_v2//tikvrpc",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_golang_x_exp//slices",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "ddl_test",
    race = "on",
    srcs = [
        "attributes_sql_test.go",
        "callback_test.go",
        "cancel_test.go",
        "column_change_test.go",
        "column_modify_test.go",
        "column_test.go",
        "column_type_change_test.go",
        "db_cache_test.go",
        "db_change_failpoints_test.go",
        "db_change_test.go",
        "db_foreign_key_test.go",
        "db_integration_test.go",
        "db_partition_test.go",
        "db_rename_test.go",
        "db_table_test.go",
        "db_test.go",
        "ddl_algorithm_test.go",
        "ddl_api_test.go",
        "ddl_error_test.go",
        "ddl_test.go",
        "ddl_tiflash_test.go",
        "ddl_worker_test.go",
        "export_test.go",
        "fail_test.go",
        "foreign_key_test.go",
        "index_change_test.go",
        "index_modify_test.go",
        "integration_test.go",
        "main_test.go",
        "modify_column_test.go",
        "multi_schema_change_test.go",
        "options_test.go",
        "partition_test.go",
        "placement_policy_ddl_test.go",
        "placement_policy_test.go",
        "placement_sql_test.go",
        "primary_key_handle_test.go",
        "reorg_test.go",
        "repair_table_test.go",
        "restart_test.go",
        "rollingback_test.go",
        "schema_test.go",
        "sequence_test.go",
        "serial_test.go",
        "stat_test.go",
        "table_modify_test.go",
        "table_split_test.go",
        "table_test.go",
        "tiflash_replica_test.go",
    ],
    embed = [":ddl"],
    deps = [
        "//config",
        "//ddl/placement",
        "//ddl/schematracker",
        "//ddl/testutil",
        "//ddl/util",
        "//domain",
        "//domain/infosync",
        "//errno",
        "//executor",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//parser",
        "//parser/ast",
        "//parser/auth",
        "//parser/charset",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//parser/types",
        "//planner/core",
        "//session",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//store/gcworker",
        "//store/helper",
        "//store/mockstore",
        "//store/mockstore/unistore",
        "//table",
        "//table/tables",
        "//tablecodec",
        "//testkit",
        "//testkit/external",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//util",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/domainutil",
        "//util/gcutil",
        "//util/logutil",
        "//util/mock",
        "//util/sem",
        "//util/sqlexec",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//testutils",
        "@com_github_tikv_client_go_v2//tikv",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_golang_x_exp//slices",
        "@org_golang_x_net//context",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_goleak//:goleak",
        "@org_uber_go_zap//:zap",
    ],
)
