load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package_group(
    name = "ddl_friend",
    packages = [
        "-//planner/...",
        "//...",
    ],
)

go_library(
    name = "ddl",
    srcs = [
        "backfilling.go",
        "callback.go",
        "cluster.go",
        "column.go",
        "constant.go",
        "ddl.go",
        "ddl_algorithm.go",
        "ddl_api.go",
        "ddl_tiflash_api.go",
        "ddl_worker.go",
        "ddl_workerpool.go",
        "delete_range.go",
        "delete_range_util.go",
        "foreign_key.go",
        "generated_column.go",
        "index.go",
        "index_merge_tmp.go",
        "job_table.go",
        "mock.go",
        "multi_schema_change.go",
        "options.go",
        "partition.go",
        "placement_policy.go",
        "reorg.go",
        "rollingback.go",
        "sanity_check.go",
        "schema.go",
        "sequence.go",
        "session_pool.go",
        "split_region.go",
        "stat.go",
        "table.go",
        "table_lock.go",
    ],
    importpath = "github.com/pingcap/tidb/ddl",
    visibility = [
        ":ddl_friend",
    ],
    deps = [
        "//br/pkg/utils",
        "//config",
        "//ddl/ingest",
        "//ddl/label",
        "//ddl/placement",
        "//ddl/syncer",
        "//ddl/util",
        "//distsql",
        "//domain/infosync",
        "//expression",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//metrics",
        "//owner",
        "//sessionctx",
        "//sessionctx/binloginfo",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//statistics",
        "//statistics/handle",
        "//store/copr",
        "//store/driver/backoff",
        "//store/helper",
        "//table",
        "//table/tables",
        "//tablecodec",
        "//tidb-binlog/pump_client",
        "//types",
        "//types/parser_driver",
        "//util",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/domainutil",
        "//util/filter",
        "//util/gcutil",
        "//util/hack",
        "//util/logutil",
        "//util/mathutil",
        "//util/mock",
        "//util/ranger",
        "//util/resourcegrouptag",
        "//util/rowDecoder",
        "//util/set",
        "//util/slice",
        "//util/sqlexec",
        "//util/stringutil",
        "//util/timeutil",
        "//util/topsql",
        "//util/topsql/state",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/ngaut/pools",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/kvproto/pkg/kvrpcpb",
        "//vendor/github.com/pingcap/kvproto/pkg/metapb",
        "//vendor/github.com/pingcap/log",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/format",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/opcode",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tidb/parser/types",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/prometheus/client_golang/prometheus",
        "//vendor/github.com/tikv/client-go/v2/error",
        "//vendor/github.com/tikv/client-go/v2/kv",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/github.com/tikv/client-go/v2/tikvrpc",
        "//vendor/github.com/tikv/client-go/v2/txnkv/rangetask",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/go.uber.org/atomic",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/exp/slices",
    ],
)

go_test(
    name = "ddl_test",
    timeout = "long",
    srcs = [
        "attributes_sql_test.go",
        "callback_test.go",
        "cancel_test.go",
        "cluster_test.go",
        "column_change_test.go",
        "column_modify_test.go",
        "column_test.go",
        "column_type_change_test.go",
        "db_cache_test.go",
        "db_change_failpoints_test.go",
        "db_change_test.go",
        "db_foreign_key_test.go",
        "db_integration_test.go",
        "db_partition_test.go",
        "db_rename_test.go",
        "db_table_test.go",
        "db_test.go",
        "ddl_algorithm_test.go",
        "ddl_api_test.go",
        "ddl_error_test.go",
        "ddl_test.go",
        "ddl_tiflash_test.go",
        "ddl_worker_test.go",
        "ddl_workerpool_test.go",
        "export_test.go",
        "fail_test.go",
        "foreign_key_test.go",
        "index_change_test.go",
        "index_merge_tmp_test.go",
        "index_modify_test.go",
        "integration_test.go",
        "job_table_test.go",
        "main_test.go",
        "modify_column_test.go",
        "multi_schema_change_test.go",
        "options_test.go",
        "partition_test.go",
        "placement_policy_ddl_test.go",
        "placement_policy_test.go",
        "placement_sql_test.go",
        "primary_key_handle_test.go",
        "repair_table_test.go",
        "restart_test.go",
        "rollingback_test.go",
        "schema_test.go",
        "sequence_test.go",
        "serial_test.go",
        "stat_test.go",
        "table_modify_test.go",
        "table_split_test.go",
        "table_test.go",
        "tiflash_replica_test.go",
    ],
    embed = [":ddl"],
    flaky = True,
    shard_count = 50,
    deps = [
        "//config",
        "//ddl/ingest",
        "//ddl/placement",
        "//ddl/schematracker",
        "//ddl/testutil",
        "//ddl/util",
        "//domain",
        "//domain/infosync",
        "//errno",
        "//executor",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//planner/core",
        "//server",
        "//session",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//store/gcworker",
        "//store/helper",
        "//store/mockstore",
        "//store/mockstore/unistore",
        "//table",
        "//table/tables",
        "//tablecodec",
        "//testkit",
        "//testkit/external",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//util",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/domainutil",
        "//util/gcutil",
        "//util/logutil",
        "//util/mock",
        "//util/sem",
        "//util/sqlexec",
        "//vendor/github.com/ngaut/pools",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/kvproto/pkg/metapb",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tidb/parser/types",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/github.com/tikv/client-go/v2/testutils",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/go.uber.org/atomic",
        "//vendor/go.uber.org/goleak",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/exp/slices",
        "//vendor/google.golang.org/grpc",
    ],
)
